# Ai-Research-Assistant-local

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  README_PAPER_SEARCH.md  SYSTEM_STATUS.md  app.py  corrected_sequence_diagram.md  dbms_sequence_diagram.md  docker-compose.yml  how_to_run.md  main.py  package-lock.json  package.json  pyproject.toml  run.sh  sequenceDiagram.mmd  simple_paper_api.py  start-dev-docker.sh  start-dev.sh  start-docker.sh  start_paper_search.sh  test_paper_search.py
backend/: .env.example  .env.template  .gitignore  README_STRUCTURE.md  REDIS_POSTGRES_SYNC.md  check_setup.py  main.py  pyproject.toml  redis_client.py  requirements.txt  run.py  start.sh  test_sync.py
backend/app/: main.py
backend/app/api/v1/: ai_metadata.py  api.py  chat.py  feedback.py  group_participants.py  groups.py  messages.py  paper_tags.py  papers.py  session_papers.py  session_participants.py  sessions.py  sync.py  system.py  users.py
backend/app/core/: config.py
backend/app/db/: postgres_client.py  redis_client.py  schema1.sql
backend/app/db/postgres_manager/: README.md  __init__.py  redis_queue.py  requirements.txt  schema.sql  schemas.py
backend/app/db/postgres_manager/managers/: __init__.py  ai_metadata.py  feedback.py  group_participants.py  groups.py  messages.py  paper_tags.py  papers.py  session_papers.py  session_participants.py  sessions.py  users.py
backend/app/models/: chat.py  responses.py
backend/app/services/: ai_service.py  arxiv_service.py  background_tasks.py  chat_service.py  redis_postgres_sync.py
(+69 files in other folders)
